@@ -1,50 +1,71 @@
 package io.kestra.plugin.core.http;
 
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.URI;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.security.MessageDigest;
+import java.time.Duration;
+import java.util.Arrays;
+import java.util.Base64;
+import java.util.HexFormat;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.TreeMap;
+
+import org.apache.commons.io.IOUtils;
+import org.apache.hc.client5.http.entity.mime.MultipartEntityBuilder;
+import org.apache.hc.core5.http.ContentType;
+import org.apache.hc.core5.http.HttpEntity;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.parallel.Execution;
+import org.junit.jupiter.api.parallel.ExecutionMode;
+import org.reactivestreams.Publisher;
+
 import com.devskiller.friendly_id.FriendlyId;
 import com.google.common.collect.ImmutableMap;
+
+import io.kestra.core.context.TestRunContextFactory;
 import io.kestra.core.http.client.HttpClientRequestException;
 import io.kestra.core.http.client.HttpClientResponseException;
 import io.kestra.core.http.client.configurations.*;
 import io.kestra.core.junit.annotations.KestraTest;
 import io.kestra.core.models.property.Property;
 import io.kestra.core.runners.RunContext;
-import io.kestra.core.runners.RunContextFactory;
 import io.kestra.core.serializers.JacksonMapper;
 import io.kestra.core.storages.StorageInterface;
 import io.kestra.core.utils.IdUtils;
 import io.kestra.core.utils.TestsUtils;
+
 import io.micronaut.context.ApplicationContext;
 import io.micronaut.context.env.Environment;
-import io.micronaut.http.*;
+import io.micronaut.http.HttpRequest;
+import io.micronaut.http.HttpResponse;
+import io.micronaut.http.HttpStatus;
+import io.micronaut.http.MediaType;
 import io.micronaut.http.annotation.*;
 import io.micronaut.http.multipart.StreamingFileUpload;
 import io.micronaut.runtime.server.EmbeddedServer;
 import jakarta.annotation.Nullable;
 import jakarta.inject.Inject;
-import org.apache.commons.io.IOUtils;
-import org.junit.jupiter.api.Test;
-import org.reactivestreams.Publisher;
 import reactor.core.publisher.Mono;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.net.URI;
-import java.nio.charset.StandardCharsets;
-import java.time.Duration;
-import java.util.Base64;
-import java.util.Map;
-import java.util.Objects;
-
+import static io.kestra.core.tenant.TenantService.MAIN_TENANT;
 import static io.kestra.core.utils.Rethrow.throwFunction;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @KestraTest
+@Execution(ExecutionMode.SAME_THREAD)
 class RequestTest {
     @Inject
-    private RunContextFactory runContextFactory;
+    private TestRunContextFactory runContextFactory;
 
     @Inject
     private StorageInterface storageInterface;
@@ -59,16 +80,16 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/hello"))
+                .uri(Property.ofValue(server.getURL().toString() + "/hello"))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("{ \"hello\": \"world\" }"));
-            assertThat(output.getEncryptedBody(), nullValue());
-            assertThat(output.getCode(), is(200));
+            assertThat(output.getBody()).isEqualTo("{ \"hello\": \"world\" }");
+            assertThat(output.getEncryptedBody()).isNull();
+            assertThat(output.getCode()).isEqualTo(200);
         }
     }
 
@@ -79,18 +100,17 @@ class RequestTest {
         Request task = Request.builder()
             .id(RequestTest.class.getSimpleName())
             .type(RequestTest.class.getName())
-            .uri(Property.of(url))
-            .method(Property.of("HEAD"))
+            .uri(Property.ofValue(url))
+            .method(Property.ofValue("HEAD"))
             .build();
 
         RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
 
         Request.Output output = task.run(runContext);
 
-        assertThat(output.getUri(), is(URI.create(url)));
-        assertThat(output.getHeaders().get("content-length").getFirst(), is("512789"));
+        assertThat(output.getUri()).isEqualTo(URI.create(url));
+        assertThat(output.getHeaders().get("content-length").getFirst()).isEqualTo("512789");
     }
-
 
     @Test
     void head404() throws Exception {
@@ -99,8 +119,8 @@ class RequestTest {
         Request task = Request.builder()
             .id(RequestTest.class.getSimpleName())
             .type(RequestTest.class.getName())
-            .uri(Property.of(url))
-            .method(Property.of("HEAD"))
+            .uri(Property.ofValue(url))
+            .method(Property.ofValue("HEAD"))
             .build();
 
         RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
@@ -110,7 +130,7 @@ class RequestTest {
             () -> task.run(runContext)
         );
 
-        assertThat(exception.getResponse().getStatus().getCode(), is(404));
+        assertThat(exception.getResponse().getStatus().getCode()).isEqualTo(404);
     }
 
     @Test
@@ -123,15 +143,50 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/redirect"))
+                .uri(Property.ofValue(server.getURL().toString() + "/redirect"))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("{ \"hello\": \"world\" }"));
-            assertThat(output.getCode(), is(200));
+            assertThat(output.getBody()).isEqualTo("{ \"hello\": \"world\" }");
+            assertThat(output.getCode()).isEqualTo(200);
+        }
+    }
+
+    @Test
+    void params() throws Exception {
+        try (
+            ApplicationContext applicationContext = ApplicationContext.run();
+            EmbeddedServer server = applicationContext.getBean(EmbeddedServer.class).start();
+
+        ) {
+            Request task = Request.builder()
+                .id(RequestTest.class.getSimpleName())
+                .type(RequestTest.class.getName())
+                .uri(Property.ofValue(server.getURL().toString() + "/params?foo=baz"))
+                .params(
+                    Property.ofValue(
+                        Map.of(
+                            "hello", "world",
+                            "foo", "bar",
+                            "bar", List.of("foo1", "foo2")
+                        )
+                    )
+                )
+                .build();
+
+            RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
+
+            Request.Output output = task.run(runContext);
+
+            assertThat((String) output.getBody()).contains("hello=world");
+            assertThat((String) output.getBody()).contains("foo=baz");
+            assertThat((String) output.getBody()).contains("foo=bar");
+            assertThat((String) output.getBody()).contains("bar=foo1");
+            assertThat((String) output.getBody()).contains("bar=foo2");
+            assertThat(output.getCode()).isEqualTo(200);
         }
     }
 
@@ -145,10 +200,11 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/redirect"))
-                .options(HttpConfiguration.builder()
-                    .followRedirects(Property.of(false))
-                    .build()
+                .uri(Property.ofValue(server.getURL().toString() + "/redirect"))
+                .options(
+                    HttpConfiguration.builder()
+                        .followRedirects(Property.ofValue(false))
+                        .build()
                 )
                 .build();
 
@@ -156,7 +212,7 @@ class RequestTest {
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getCode(), is(301));
+            assertThat(output.getCode()).isEqualTo(301);
         }
     }
 
@@ -170,10 +226,11 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/hello417"))
-                .options(HttpConfiguration.builder()
-                    .allowFailed(Property.of(true))
-                    .build()
+                .uri(Property.ofValue(server.getURL().toString() + "/hello417"))
+                .options(
+                    HttpConfiguration.builder()
+                        .allowFailed(Property.ofValue(true))
+                        .build()
                 )
                 .build();
 
@@ -181,8 +238,8 @@ class RequestTest {
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("{ \"hello\": \"world\" }"));
-            assertThat(output.getCode(), is(417));
+            assertThat(output.getBody()).isEqualTo("{ \"hello\": \"world\" }");
+            assertThat(output.getCode()).isEqualTo(417);
         }
     }
 
@@ -196,7 +253,7 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/hello417"))
+                .uri(Property.ofValue(server.getURL().toString() + "/hello417"))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
@@ -206,7 +263,7 @@ class RequestTest {
                 () -> task.run(runContext)
             );
 
-            assertThat(exception.getResponse().getStatus().getCode(), is(417));
+            assertThat(exception.getResponse().getStatus().getCode()).isEqualTo(417);
         }
     }
 
@@ -220,11 +277,11 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/markdown"))
-                .method(Property.of("POST"))
-                .body(Property.of("# hello web!"))
-                .contentType(Property.of("text/markdown"))
-                .options(HttpConfiguration.builder().defaultCharset(Property.of(null)).build())
+                .uri(Property.ofValue(server.getURL().toString() + "/markdown"))
+                .method(Property.ofValue("POST"))
+                .body(Property.ofValue("# hello web!"))
+                .contentType(Property.ofValue("text/markdown"))
+                .options(HttpConfiguration.builder().defaultCharset(Property.ofValue(null)).build())
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
@@ -234,10 +291,10 @@ class RequestTest {
                 () -> task.run(runContext)
             );
 
-            assertThat(exception.getResponse().getStatus().getCode(), is(417));
-            assertThat(exception.getMessage(), containsString("hello world"));
+            assertThat(exception.getResponse().getStatus().getCode()).isEqualTo(417);
+            assertThat(exception.getMessage()).contains("hello world");
             byte[] content = ((io.kestra.core.http.HttpRequest.ByteArrayRequestBody) exception.getRequest().getBody()).getContent();
-            assertThat(new String(content) , containsString("hello web"));
+            assertThat(new String(content)).contains("hello web");
         }
     }
 
@@ -251,11 +308,12 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/hello"))
-                .options(HttpConfiguration.builder()
-                    .timeout(TimeoutConfiguration.builder().readIdleTimeout(Property.of(Duration.ofSeconds(30))).build())
-                    .ssl(SslOptions.builder().insecureTrustAllCertificates(Property.of(true)).build())
-                    .build()
+                .uri(Property.ofValue(server.getURL().toString() + "/hello"))
+                .options(
+                    HttpConfiguration.builder()
+                        .timeout(TimeoutConfiguration.builder().readIdleTimeout(Property.ofValue(Duration.ofSeconds(30))).build())
+                        .ssl(SslOptions.builder().insecureTrustAllCertificates(Property.ofValue(true)).build())
+                        .build()
                 )
                 .build();
 
@@ -263,8 +321,8 @@ class RequestTest {
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("{ \"hello\": \"world\" }"));
-            assertThat(output.getCode(), is(200));
+            assertThat(output.getBody()).isEqualTo("{ \"hello\": \"world\" }");
+            assertThat(output.getCode()).isEqualTo(200);
         }
     }
 
@@ -278,11 +336,12 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/hello"))
-                .options(HttpConfiguration.builder()
-                    .allowFailed(Property.of(true))
-                    .timeout(TimeoutConfiguration.builder().readIdleTimeout(Property.of(Duration.ofSeconds(30))).build())
-                    .build()
+                .uri(Property.ofValue(server.getURL().toString() + "/hello"))
+                .options(
+                    HttpConfiguration.builder()
+                        .allowFailed(Property.ofValue(true))
+                        .timeout(TimeoutConfiguration.builder().readIdleTimeout(Property.ofValue(Duration.ofSeconds(30))).build())
+                        .build()
                 )
                 .build();
 
@@ -293,7 +352,7 @@ class RequestTest {
                 () -> task.run(runContext)
             );
 
-            assertThat(exception.getMessage(), containsString("unable to find valid certification path"));
+            assertThat(exception.getMessage()).contains("unable to find valid certification path");
         }
     }
 
@@ -307,17 +366,17 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .method(Property.of("POST"))
-                .uri(Property.of(server.getURL().toString() + "/post/json"))
-                .body(Property.of(JacksonMapper.ofJson().writeValueAsString(ImmutableMap.of("hello", "world"))))
+                .method(Property.ofValue("POST"))
+                .uri(Property.ofValue(server.getURL().toString() + "/post/json"))
+                .body(Property.ofValue(JacksonMapper.ofJson().writeValueAsString(ImmutableMap.of("hello", "world"))))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, Map.of());
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("{\"hello\":\"world\"}"));
-            assertThat(output.getCode(), is(200));
+            assertThat(output.getBody()).isEqualTo("{\"hello\":\"world\"}");
+            assertThat(output.getCode()).isEqualTo(200);
         }
     }
 
@@ -331,24 +390,29 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .method(Property.of("POST"))
-                .contentType(Property.of(MediaType.APPLICATION_FORM_URLENCODED))
-                .uri(Property.of(server.getURL().toString() + "/post/url-encoded"))
-                .headers(Property.of(Map.of(
-                    "test", "{{ inputs.test }}"
-                )))
-                .formData(Property.of(ImmutableMap.of("hello", "world")))
+                .method(Property.ofValue("POST"))
+                .contentType(Property.ofValue(MediaType.APPLICATION_FORM_URLENCODED))
+                .uri(Property.ofValue(server.getURL().toString() + "/post/url-encoded"))
+                .headers(
+                    Property.ofValue(
+                        Map.of(
+                            "test", "{{ inputs.test }}"
+                        )
+                    )
+                )
+                .formData(Property.ofValue(ImmutableMap.of("hello", "world")))
                 .build();
 
-
-            RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of(
-                "test", "value"
-            ));
+            RunContext runContext = TestsUtils.mockRunContext(
+                this.runContextFactory, task, ImmutableMap.of(
+                    "test", "value"
+                )
+            );
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("world > value"));
-            assertThat(output.getCode(), is(200));
+            assertThat(output.getBody()).isEqualTo("world > value");
+            assertThat(output.getCode()).isEqualTo(200);
         }
     }
 
@@ -357,7 +421,7 @@ class RequestTest {
         File file = new File(Objects.requireNonNull(RequestTest.class.getClassLoader().getResource("application-test.yml")).toURI());
 
         URI fileStorage = storageInterface.put(
-            null,
+            MAIN_TENANT,
             null,
             new URI("/" + FriendlyId.createFriendlyId()),
             new FileInputStream(file)
@@ -371,18 +435,18 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .method(Property.of("POST"))
-                .contentType(Property.of(MediaType.MULTIPART_FORM_DATA))
-                .uri(Property.of(server.getURL().toString() + "/post/multipart"))
-                .formData(Property.of(ImmutableMap.of("hello", "world", "file", fileStorage.toString())))
+                .method(Property.ofValue("POST"))
+                .contentType(Property.ofValue(MediaType.MULTIPART_FORM_DATA))
+                .uri(Property.ofValue(server.getURL().toString() + "/post/multipart"))
+                .formData(Property.ofValue(ImmutableMap.of("hello", "world", "file", fileStorage.toString())))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("world > " + IOUtils.toString(new FileInputStream(file), StandardCharsets.UTF_8)));
-            assertThat(output.getCode(), is(200));
+            assertThat(output.getBody()).isEqualTo("world > " + IOUtils.toString(new FileInputStream(file), StandardCharsets.UTF_8));
+            assertThat(output.getCode()).isEqualTo(200);
         }
     }
 
@@ -391,7 +455,7 @@ class RequestTest {
         File file = new File(Objects.requireNonNull(RequestTest.class.getClassLoader().getResource("application-test.yml")).toURI());
 
         URI fileStorage = storageInterface.put(
-            null,
+            MAIN_TENANT,
             null,
             new URI("/" + FriendlyId.createFriendlyId()),
             new FileInputStream(file)
@@ -405,18 +469,18 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .method(Property.of("POST"))
-                .contentType(Property.of(MediaType.MULTIPART_FORM_DATA))
-                .uri(Property.of(server.getURL().toString() + "/post/multipart"))
-                .formData(Property.of(ImmutableMap.of("hello", "world", "file", ImmutableMap.of("content", fileStorage.toString(), "name", "test.yml"))))
+                .method(Property.ofValue("POST"))
+                .contentType(Property.ofValue(MediaType.MULTIPART_FORM_DATA))
+                .uri(Property.ofValue(server.getURL().toString() + "/post/multipart"))
+                .formData(Property.ofValue(ImmutableMap.of("hello", "world", "file", ImmutableMap.of("content", fileStorage.toString(), "name", "test.yml"))))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("world > " + IOUtils.toString(new FileInputStream(file), StandardCharsets.UTF_8)));
-            assertThat(output.getCode(), is(200));
+            assertThat(output.getBody()).isEqualTo("world > " + IOUtils.toString(new FileInputStream(file), StandardCharsets.UTF_8));
+            assertThat(output.getCode()).isEqualTo(200);
         }
     }
 
@@ -430,8 +494,8 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/hello"))
-                .encryptBody(Property.of(true))
+                .uri(Property.ofValue(server.getURL().toString() + "/hello"))
+                .encryptBody(Property.ofValue(true))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
@@ -439,10 +503,83 @@ class RequestTest {
             Request.Output output = task.run(runContext);
 
             // when encrypted, this must not be the plaintext value
-            assertThat(output.getBody(), nullValue());
-            assertThat(output.getEncryptedBody(), not("{ \"hello\": \"world\" }"));
-            assertThat(output.getCode(), is(200));
+            assertThat(output.getBody()).isNull();
+            assertThat(output.getEncryptedBody()).isNotEqualTo("{ \"hello\": \"world\" }");
+            assertThat(output.getCode()).isEqualTo(200);
         }
+    }
+
+    @Test
+    void multipartInlineContent_doesNotThrowContentTooLong() throws Exception {
+        Path tmp = Files.createTempFile("kestra-large-", ".txt");
+
+        try {
+            int size = 5 * 1024 * 1024; // large enough to trigger old client-side ContentTooLongException
+            byte[] payloadBytes = new byte[size];
+            Arrays.fill(payloadBytes, (byte) 'a');
+            Files.write(tmp, payloadBytes);
+
+            URI bigStorage;
+            try (InputStream in = Files.newInputStream(tmp)) {
+                bigStorage = storageInterface.put(
+                    MAIN_TENANT,
+                    null,
+                    new URI("/" + FriendlyId.createFriendlyId()),
+                    in
+                );
+            }
+
+            try (
+                ApplicationContext applicationContext = ApplicationContext.run();
+                EmbeddedServer server = applicationContext.getBean(EmbeddedServer.class).start()
+            ) {
+                Request task = Request.builder()
+                    .id(RequestTest.class.getSimpleName())
+                    .type(RequestTest.class.getName())
+                    .method(Property.ofValue("POST"))
+                    .contentType(Property.ofValue(MediaType.MULTIPART_FORM_DATA))
+                    .uri(Property.ofValue(server.getURL().toString() + "/post/multipart"))
+                    .formData(
+                        Property.ofValue(
+                            ImmutableMap.of(
+                                "hello", "world",
+                                "file", ImmutableMap.of(
+                                    "content", bigStorage.toString(),
+                                    "name", "big.txt"
+                                )
+                            )
+                        )
+                    )
+                    .build();
+
+                RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
+
+                assertThatThrownBy(() -> task.run(runContext))
+                    .isInstanceOf(HttpClientResponseException.class)
+                    .hasMessageContaining("response code '413'");
+            }
+        } finally {
+            Files.deleteIfExists(tmp);
+        }
+    }
+
+    @Test
+    void multipartFromEntity_doesNotMaterialize_andKeepsEntityForSend() throws Exception {
+        HttpEntity entity = MultipartEntityBuilder.create()
+            .addTextBody("hello", "world")
+            .addBinaryBody(
+                "file",
+                "abc".getBytes(StandardCharsets.UTF_8),
+                ContentType.DEFAULT_BINARY,
+                "a.txt"
+            )
+            .build();
+
+        io.kestra.core.http.HttpRequest.RequestBody body = io.kestra.core.http.HttpRequest.RequestBody.from(entity);
+
+        HttpEntity rebuilt = body.to();
+
+        assertThat(rebuilt).isSameAs(entity);
     }
 
     @Test
@@ -450,8 +587,8 @@ class RequestTest {
         Request task = Request.builder()
             .id(RequestTest.class.getSimpleName())
             .type(RequestTest.class.getName())
-            .uri(Property.of("https://github.com/kestra-io.png"))
-            .contentType(Property.of("application/octet-stream"))
+            .uri(Property.ofValue("https://github.com/kestra-io.png"))
+            .contentType(Property.ofValue("application/octet-stream"))
             .build();
 
         RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
@@ -461,7 +598,7 @@ class RequestTest {
             () -> task.run(runContext)
         );
 
-        assertThat(exception.getMessage(), containsString("Illegal unicode code"));
+        assertThat(exception.getMessage()).contains("Illegal unicode code");
     }
 
     @Test
@@ -473,11 +610,14 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/auth/basic"))
-                .options(HttpConfiguration.builder()
-                    .auth(BasicAuthConfiguration.builder().username(Property.of("John"))
-                        .password(Property.of("p4ss")).build())
-                    .build()
+                .uri(Property.ofValue(server.getURL().toString() + "/auth/basic"))
+                .options(
+                    HttpConfiguration.builder()
+                        .auth(
+                            BasicAuthConfiguration.builder().username(Property.ofValue("John"))
+                                .password(Property.ofValue("p4ss")).build()
+                        )
+                        .build()
                 )
                 .build();
 
@@ -485,8 +625,8 @@ class RequestTest {
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("{\"hello\":\"John\"}"));
-            assertThat(output.getCode(), is(200));
+            assertThat(output.getBody()).isEqualTo("{\"hello\":\"John\"}");
+            assertThat(output.getCode()).isEqualTo(200);
         }
     }
 
@@ -500,11 +640,17 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/auth/basic"))
-                .options(HttpConfiguration.builder()
-                    .basicAuthUser("John")
-                    .basicAuthPassword("p4ss")
-                    .build()
+                .uri(Property.ofValue(server.getURL().toString() + "/auth/basic"))
+                .options(
+                    HttpConfiguration.builder()
+                        .auth(
+                            BasicAuthConfiguration
+                                .builder()
+                                .username(Property.ofValue("John"))
+                                .password(Property.ofValue("p4ss"))
+                                .build()
+                        )
+                        .build()
                 )
                 .build();
 
@@ -512,8 +658,8 @@ class RequestTest {
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("{\"hello\":\"John\"}"));
-            assertThat(output.getCode(), is(200));
+            assertThat(output.getBody()).isEqualTo("{\"hello\":\"John\"}");
+            assertThat(output.getCode()).isEqualTo(200);
         }
     }
 
@@ -528,10 +674,11 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/auth/bearer"))
-                .options(HttpConfiguration.builder()
-                    .auth(BearerAuthConfiguration.builder().token(Property.of(id)).build())
-                    .build()
+                .uri(Property.ofValue(server.getURL().toString() + "/auth/bearer"))
+                .options(
+                    HttpConfiguration.builder()
+                        .auth(BearerAuthConfiguration.builder().token(Property.ofValue(id)).build())
+                        .build()
                 )
                 .build();
 
@@ -539,8 +686,98 @@ class RequestTest {
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("{\"hello\":\"" + id + "\"}"));
-            assertThat(output.getCode(), is(200));
+            assertThat(output.getBody()).isEqualTo("{\"hello\":\"" + id + "\"}");
+            assertThat(output.getCode()).isEqualTo(200);
+        }
+    }
+
+    @Test
+    void allowedResponseCodesEnforcedForSuccessResponses() {
+        try (
+            ApplicationContext applicationContext = ApplicationContext.run();
+            EmbeddedServer server = applicationContext.getBean(EmbeddedServer.class).start();
+        ) {
+            Request task = Request.builder()
+                .id(RequestTest.class.getSimpleName())
+                .type(RequestTest.class.getName())
+                .uri(Property.ofValue(server.getURL().toString() + "/hello"))
+                .options(
+                    HttpConfiguration.builder()
+                        .allowedResponseCodes(Property.ofValue(List.of(201)))
+                        .build()
+                )
+                .build();
+
+            RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, Map.of());
+
+            HttpClientResponseException exception = assertThrows(
+                HttpClientResponseException.class,
+                () -> task.run(runContext)
+            );
+
+            assertThat(exception.getResponse().getStatus().getCode()).isEqualTo(200);
+        }
+    }
+
+    @Test
+    void digestAuthMd5() throws Exception {
+        try (
+            ApplicationContext applicationContext = ApplicationContext.run();
+            EmbeddedServer server = applicationContext.getBean(EmbeddedServer.class).start();
+        ) {
+            Request task = Request.builder()
+                .id(RequestTest.class.getSimpleName())
+                .type(RequestTest.class.getName())
+                .uri(Property.ofValue(server.getURL().toString() + "/auth/digest/md5"))
+                .options(
+                    HttpConfiguration.builder()
+                        .auth(
+                            DigestAuthConfiguration.builder()
+                                .username(Property.ofValue("John"))
+                                .password(Property.ofValue("p4ss"))
+                                .build()
+                        )
+                        .build()
+                )
+                .build();
+
+            RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, Map.of());
+
+            Request.Output output = task.run(runContext);
+
+            assertThat(output.getBody()).isEqualTo("{\"hello\":\"John\"}");
+            assertThat(output.getCode()).isEqualTo(200);
+        }
+    }
+
+    @Test
+    void digestAuthSha256() throws Exception {
+        try (
+            ApplicationContext applicationContext = ApplicationContext.run();
+            EmbeddedServer server = applicationContext.getBean(EmbeddedServer.class).start();
+        ) {
+            Request task = Request.builder()
+                .id(RequestTest.class.getSimpleName())
+                .type(RequestTest.class.getName())
+                .uri(Property.ofValue(server.getURL().toString() + "/auth/digest/sha256"))
+                .options(
+                    HttpConfiguration.builder()
+                        .auth(
+                            DigestAuthConfiguration.builder()
+                                .username(Property.ofValue("John"))
+                                .password(Property.ofValue("p4ss"))
+                                .build()
+                        )
+                        .build()
+                )
+                .build();
+
+            RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, Map.of());
+
+            Request.Output output = task.run(runContext);
+
+            assertThat(output.getBody()).isEqualTo("{\"hello\":\"John\"}");
+            assertThat(output.getCode()).isEqualTo(200);
         }
     }
 
@@ -554,10 +791,10 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/content-type"))
-                .method(Property.of("POST"))
-                .body(Property.of("{}"))
-                .contentType(Property.of("application/vnd.campaignsexport.v1+json"))
+                .uri(Property.ofValue(server.getURL().toString() + "/content-type"))
+                .method(Property.ofValue("POST"))
+                .body(Property.ofValue("{}"))
+                .contentType(Property.ofValue("application/vnd.campaignsexport.v1+json"))
                 .options(HttpConfiguration.builder().logs(HttpConfiguration.LoggingType.values()).defaultCharset(null).build())
                 .build();
 
@@ -565,8 +802,8 @@ class RequestTest {
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("application/vnd.campaignsexport.v1+json"));
-            assertThat(output.getCode(), is(200));
+            assertThat(output.getBody()).isEqualTo("application/vnd.campaignsexport.v1+json");
+            assertThat(output.getCode()).isEqualTo(200);
         }
     }
 
@@ -580,20 +817,28 @@ class RequestTest {
             Request task = Request.builder()
                 .id(RequestTest.class.getSimpleName())
                 .type(RequestTest.class.getName())
-                .uri(Property.of(server.getURL().toString() + "/uri with space"))
+                .uri(Property.ofValue(server.getURL().toString() + "/uri with space"))
                 .build();
 
             RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
 
             Request.Output output = task.run(runContext);
 
-            assertThat(output.getBody(), is("Hello World"));
-            assertThat(output.getCode(), is(200));
+            assertThat(output.getBody()).isEqualTo("Hello World");
+            assertThat(output.getCode()).isEqualTo(200);
         }
     }
 
     @Controller
     static class MockController {
+
+        private static final int LARGE_BODY_SIZE = 20 * 1024 * 1024; // 20MB > 19MB safeguard
+        private static final String LARGE_BODY = "a".repeat(LARGE_BODY_SIZE);
+        private static final String DIGEST_REALM = "kestra";
+        private static final String DIGEST_OPAQUE = "kestra-opaque";
+        private static final String DIGEST_NONCE_MD5 = "kestra-md5-nonce";
+        private static final String DIGEST_NONCE_SHA256 = "kestra-sha256-nonce";
+
         @Get("/hello")
         HttpResponse<String> hello() {
             return HttpResponse.ok("{ \"hello\": \"world\" }");
@@ -616,6 +861,11 @@ class RequestTest {
             return HttpResponse.status(HttpStatus.EXPECTATION_FAILED).body("{ \"hello\": \"world\" }");
         }
 
+        @Get("/params")
+        HttpResponse<String> params(HttpRequest<?> request) {
+            return HttpResponse.ok(request.getUri().getRawQuery());
+        }
+
         @Post("/markdown")
         @Consumes(MediaType.TEXT_MARKDOWN)
         @Produces(MediaType.TEXT_MARKDOWN)
@@ -633,7 +883,8 @@ class RequestTest {
             return request.getHeaders()
                 .getAuthorization()
                 .filter(v -> v.startsWith("Basic "))
-                .map(v -> {
+                .map(v ->
+                {
                     String decode = new String(
                         Base64.getDecoder().decode(v.substring(6).getBytes(StandardCharsets.UTF_8)),
                         StandardCharsets.UTF_8
@@ -656,6 +907,16 @@ class RequestTest {
                 .orElseThrow();
         }
 
+        @Get("/auth/digest/md5")
+        HttpResponse<String> digestAuthMd5(HttpRequest<?> request) {
+            return handleDigestAuth(request, "MD5", DIGEST_NONCE_MD5);
+        }
+
+        @Get("/auth/digest/sha256")
+        HttpResponse<String> digestAuthSha256(HttpRequest<?> request) {
+            return handleDigestAuth(request, "SHA-256", DIGEST_NONCE_SHA256);
+        }
+
         @Post(uri = "/post/json")
         HttpResponse<Map<String, String>> postBody(@Body Map<String, String> body) {
             return HttpResponse.ok(body);
@@ -673,7 +934,8 @@ class RequestTest {
             Publisher<Boolean> uploadPublisher = file.transferTo(tempFile);
 
             return Mono.from(uploadPublisher)
-                .map(throwFunction(success -> {
+                .map(throwFunction(success ->
+                {
                     try (FileInputStream fileInputStream = new FileInputStream(tempFile)) {
                         return hello + " > " + IOUtils.toString(fileInputStream, StandardCharsets.UTF_8);
                     }
@@ -683,6 +945,170 @@ class RequestTest {
         @Get("/uri%20with%20space")
         HttpResponse<String> uriWithSpace() {
             return HttpResponse.ok("Hello World");
+        }
+
+        @Get("/large")
+        HttpResponse<String> large() {
+            return HttpResponse.ok(LARGE_BODY);
+        }
+
+        private static HttpResponse<String> handleDigestAuth(HttpRequest<?> request, String algorithm, String nonce) {
+            var authorization = request.getHeaders().getAuthorization().orElse(null);
+            if (authorization == null || !authorization.startsWith("Digest ")) {
+                return digestChallenge(algorithm, nonce);
+            }
+
+            Map<String, String> directives = parseDigestAuthorization(authorization);
+            String username = directives.get("username");
+            String realm = directives.get("realm");
+            String requestNonce = directives.get("nonce");
+            String uri = directives.get("uri");
+            String response = directives.get("response");
+            String qop = directives.get("qop");
+            String nc = directives.get("nc");
+            String cnonce = directives.get("cnonce");
+
+            if (
+                !"John".equals(username) ||
+                    !DIGEST_REALM.equals(realm) ||
+                    !nonce.equals(requestNonce) ||
+                    response == null ||
+                    !"auth".equals(qop) ||
+                    nc == null ||
+                    cnonce == null ||
+                    uri == null
+            ) {
+                return digestChallenge(algorithm, nonce);
+            }
+
+            String method = request.getMethodName();
+            String expected = computeDigestResponse(
+                algorithm,
+                username,
+                realm,
+                "p4ss",
+                method,
+                uri,
+                requestNonce,
+                nc,
+                cnonce,
+                qop
+            );
+
+            if (!expected.equalsIgnoreCase(response)) {
+                return digestChallenge(algorithm, nonce);
+            }
+
+            return HttpResponse.ok("{\"hello\":\"John\"}");
+        }
+
+        private static HttpResponse<String> digestChallenge(String algorithm, String nonce) {
+            return HttpResponse.<String> status(HttpStatus.UNAUTHORIZED)
+                .header(
+                    "WWW-Authenticate",
+                    "Digest realm=\"" + DIGEST_REALM + "\", qop=\"auth\", nonce=\"" + nonce + "\", opaque=\"" + DIGEST_OPAQUE + "\", algorithm=" + algorithm
+                );
+        }
+
+        private static Map<String, String> parseDigestAuthorization(String header) {
+            String payload = header.substring("Digest ".length());
+            Map<String, String> directives = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
+
+            StringBuilder token = new StringBuilder();
+            boolean inQuotes = false;
+            for (int i = 0; i < payload.length(); i++) {
+                char c = payload.charAt(i);
+                if (c == '"') {
+                    inQuotes = !inQuotes;
+                    token.append(c);
+                } else if (c == ',' && !inQuotes) {
+                    putDigestDirective(directives, token.toString());
+                    token.setLength(0);
+                } else {
+                    token.append(c);
+                }
+            }
+            putDigestDirective(directives, token.toString());
+
+            return directives;
+        }
+
+        private static void putDigestDirective(Map<String, String> directives, String rawToken) {
+            String token = rawToken.trim();
+            if (token.isEmpty()) {
+                return;
+            }
+
+            int equalsIndex = token.indexOf('=');
+            if (equalsIndex == -1) {
+                return;
+            }
+
+            String key = token.substring(0, equalsIndex).trim();
+            String rawValue = token.substring(equalsIndex + 1).trim();
+            String value = rawValue;
+            if (value.length() >= 2 && value.startsWith("\"") && value.endsWith("\"")) {
+                value = value.substring(1, value.length() - 1);
+            }
+
+            directives.put(key, value);
+        }
+
+        private static String computeDigestResponse(
+            String algorithm,
+            String username,
+            String realm,
+            String password,
+            String method,
+            String digestUri,
+            String nonce,
+            String nc,
+            String cnonce,
+            String qop) {
+            String ha1 = hash(algorithm, username + ":" + realm + ":" + password);
+            String ha2 = hash(algorithm, method + ":" + digestUri);
+            return hash(algorithm, ha1 + ":" + nonce + ":" + nc + ":" + cnonce + ":" + qop + ":" + ha2);
+        }
+
+        private static String hash(String algorithm, String input) {
+            String javaAlgorithm = switch (algorithm) {
+                case "MD5" -> "MD5";
+                case "SHA-256" -> "SHA-256";
+                default -> throw new IllegalArgumentException("Unsupported digest algorithm: " + algorithm);
+            };
+
+            try {
+                MessageDigest digest = MessageDigest.getInstance(javaAlgorithm);
+                byte[] hashed = digest.digest(input.getBytes(StandardCharsets.ISO_8859_1));
+                return HexFormat.of().formatHex(hashed);
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
+        }
+    }
+
+    @Test
+    void largeBodyFailsFast() {
+        try (
+            ApplicationContext applicationContext = ApplicationContext.run();
+            EmbeddedServer server = applicationContext.getBean(EmbeddedServer.class).start();
+        ) {
+            Request task = Request.builder()
+                .id(RequestTest.class.getSimpleName())
+                .type(RequestTest.class.getName())
+                .uri(Property.ofValue(server.getURL().toString() + "/large"))
+                .build();
+
+            RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, task, ImmutableMap.of());
+
+            IllegalArgumentException exception = assertThrows(
+                IllegalArgumentException.class,
+                () -> task.run(runContext)
+            );
+
+            assertThat(exception.getMessage())
+                .contains("Response body is too large to store in task outputs")
+                .contains("Download");
         }
     }
 }
